--- a/dynamicfeature/src/main/res/layout/activity_description_feature.xml
+++ b/dynamicfeature/src/main/res/layout/activity_description_feature.xml
@@ -10,7 +10,6 @@
     android:paddingEnd="@dimen/margin_xx_small"
     android:paddingRight="@dimen/margin_xx_small">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,7 +33,7 @@
             android:layout_marginStart="@dimen/margin_medium"
             tools:text="Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
 
-        <com.lyapkov.utils.ui.EquilateralImageView
+        <ImageView
             android:id="@+id/description_imageview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
