--- a/app/src/main/res/menu/main_screen_menu.xml
+++ b/app/src/main/res/menu/main_screen_menu.xml
@@ -8,4 +8,9 @@
         android:title="@string/menu_title_history"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/menu_screen_settings"
+        android:title="@string/menu_title_settings"
+        android:icon="@drawable/ic_search"
+        app:showAsAction="always"/>
 </menu>
